fix mobile scroll + header z-index

--- a/src/_assets/stylesheets/styles.css
+++ b/src/_assets/stylesheets/styles.css
@@ -273,13 +273,18 @@ details[open] > summary {
 
 #latestPostsList {
 	touch-action: none;
-	width: 100%
+	/* width: 100% */
+	scroll-snap-type: x mandatory;
+	scroll-behavior: smooth;
 }
 
 @media (max-width: 768px) {
 	#latestPostsList {
 		margin: 0;
-		width: 100%;
+		/* width: 100%; */
+		scroll-snap-type: none;
+		scroll-behavior: auto;
+		touch-action: auto;
 	}
 	#latestPostsList > div > div:nth-child(2){
 		margin-top: -2px;
@@ -341,7 +346,6 @@ details[open] > summary {
 header > #headerScrim {
 	mask-image: linear-gradient(180deg, rgba(203, 203, 203, 0.06) 0%, rgba(203, 203, 203, 1) 0.15%, rgba(203, 203, 203, 0.88) 34.79%, rgba(203, 203, 203, 0.00) 95.09%);
 	backdrop-filter: blur(5px);
-	z-index: -10;
 }
 
 /* #burger .hamburger */
